# Max_Template

./: CMakeLists.txt  LICENSE  README.md
Template/: CMakeLists.txt
Template/src/: CMakeLists.txt  template.cpp
Template_glog/: CMakeLists.txt
Template_glog/glog/include/glog/: config.h
Template_glog/src/: CMakeLists.txt  template_glog.cpp
cmake/: GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  version.h.in
src/: CMakeLists.txt  template.cpp
